--- a/config.json
+++ b/config.json
@@ -1,14 +1,17 @@
 {
-  "listen": "0.0.0.0:8001",
-  "policy": [{
-    "bandwidth": 102400,
-    "burst":102400,
-    "source": "10.0.0.0/8",
-    "destination": "127.0.0.1:8000"
-  },{
-    "bandwidth": 10240,
-    "burst":10240,
-    "source": "0.0.0.0/0",
-    "destination": "127.0.0.1:8000"
-  }]
+  "listen": "0.0.0.0:443",
+  "policy": [
+    {
+      "bandwidth": 102400,
+      "burst": 102400,
+      "source": "10.0.0.0/8",
+      "destination": "MirrorsFrontend:80"
+    },
+    {
+      "bandwidth": 10240,
+      "burst": 10240,
+      "source": "0.0.0.0/0",
+      "destination": "MirrorsFrontend:80"
+    }
+  ]
 }
